--- a/css/design.css
+++ b/css/design.css
@@ -339,7 +339,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 .culture-pic{
     position: absolute;
     width: 45%;
-    top: -30%;
+    top: -25%;
     box-shadow: 4px -4px 4px rgba(70, 74, 76, 0.15);
 }
 .culture img{
@@ -402,8 +402,9 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     border-bottom-left-radius: 40px;
 }
 .reg-txt{
-    position: relative;
+    position: absolute;
     width: 70%;
+    right: 0;
     height: 100%;
     font-size: 1.75rem;
     font-weight: 300;
@@ -431,12 +432,18 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 .rsa-img{
     display: block;
 }
-#rsa, #avc, #nst, #mf, #pms{
+#rsa, #avc, #nst, #cbs, #mf, #pms{
     background: url("../images/products-bg.jpg") no-repeat center;
     background-size: cover;
 }
-#rsa p, #avc p, #nst p, #mf p, #cbs p, #pms p{
+#rsa p, #avc p, #nst p, #mf p, #pms p{
     margin: 35px 20px;
+}
+#cbs {
+    padding-top: 35px
+}
+#cbs p {
+    margin: 20px 20px;
 }
 #rsa p i, #avc p i, #nst p i, #mf p i{
     font-weight: 500;
@@ -464,10 +471,10 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     border-bottom-right-radius: 20px;
 }
 #prod-list li {
-    height: 16.8%;
-    width: 101%;
+    position: relative;
+    flex: 1;
+    width: 100%;
     border-bottom: 1px solid #1f6aa4;
-    padding: 0 10px;
 }
 #prod-list li:last-child{
     border-bottom: none;
@@ -476,8 +483,9 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     background-color: #1f6aa4;
 }
 #prod-list li a{
-    position: relative;
+    position: absolute;
     top: 50%;
+    width: 100%;
     color: #1f6aa4;
     padding: 1rem;
     font-weight: 500;
@@ -617,7 +625,8 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     bottom: 1px;
     border-bottom: 0;
 }
-.location .nav-tabs .nav-item.show .nav-link, .location .nav-tabs .nav-link.active{
+.location .nav-tabs .nav-item.show .nav-link, .location .nav-tabs .nav-link.active, .know .nav-tabs .nav-item.show .nav-link,
+.know .nav-tabs .nav-link.active{
     background-color: transparent !important;
     font-weight: 500;
 }
@@ -774,12 +783,16 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 #vac #accordion5 h6 {
     color: #a990ba;
 }
-#alm, #cbs, #csr, #m_news, #gall, #cald {
+#alm, #csr, #m_news, #gall, #cald {
     height: 500px;
 }
 #f-rep{
     padding-top: 50px;
     padding-bottom: 50px;
+}
+#f-rep .col-md-6 {
+    padding-left: 5%;
+    padding-right: 5%;
 }
 #f-rep h2, #f-rep ul li a, #f-rep ul li .fa-chevron-right::before {
     color: #4b78af;
@@ -905,20 +918,14 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     overflow: hidden;
     border: 1px solid rgba(0,0,0,.15);
     border-radius: 20px;
+    text-align: left;
 }
-#cv .custom-file input {
-    position: absolute;
-    left: -114px;
-    width: 100%;
-}
-#cv .custom-file input, #cv .custom-file-control{
-    opacity: 1;
-    height: inherit;
-    background: none;
-    outline: none;
-    box-shadow: none;
+#cv .custom-file-input {
+    display: none;
 }
 #cv .custom-file-control{
+    outline: none;
+    box-shadow: none;
     border: none;
 }
 .custom-file-control:lang(en)::after {
@@ -940,7 +947,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     background-size: cover;
 }
 .invest-calc, .multi-fund, .invest-rep, .invest-chart {
-    height: 400px;
+    height: 450px;
     color: white;
 }
 .invest-calc{
@@ -957,42 +964,37 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 }
 .multi-fund{
     background-color: #7f7f7f;
-    padding: 0 30px;
 }
-.multi-fund-txt, .invest-rep-txt, .comp-prof form, .prof-label, .dir-img figure{
-    position: relative;
-}
-.multi-fund-txt img{
-    width: 120px;
-    margin-bottom: 10px;
+.multi-fund > .v-align, .invest-rep > .v-align, .comp-prof form, .prof-label, .dir-img figure{
+    position: absolute;
 }
 .invest-rep{
     background-color: #2067a5;
-    padding-left:  5%;
-    padding-right: 5%;
 }
-.invest-rep-txt > p, #f-rep p {
+.invest-rep > .v-align > p, #f-rep p {
     font-size: 1.25rem;
-}
-.invest-rep-txt > p {
     font-weight: 300;
 }
-.invest-rep-txt > ul, #downld ul, #f-rep ul{
+.invest-rep > .v-align > ul, #downld ul, #f-rep ul{
     list-style-type: none;
     padding: 0;
 }
-.invest-rep-txt > ul > li {
+.invest-rep > .v-align > ul > li {
     border-bottom: 2px solid white;
     padding: 5px;
 }
-.invest-rep-txt > ul > li > .fa-chevron-right::before, #f-rep ul li .fa-chevron-right::before {
+.invest-rep > .v-align > ul > li > .fa-chevron-right::before, #f-rep ul li .fa-chevron-right::before {
     position: relative;
     font-size: 12px;
     top: -2px;
 }
-.invest-rep-txt > ul > li > a, .invest-rep-txt > ul > li > .fa-chevron-right::before {
+.invest-rep > .v-align > ul > li > a, .invest-rep > .v-align > ul > li > .fa-chevron-right::before {
     color: white;
     font-weight: 300;
+}
+.multi-fund > .v-align, .invest-rep > .v-align {
+    width: 90%;
+    left: 5%;
 }
 .invest-chart{
     background: url(../images/invest-chart.jpg) no-repeat center;
@@ -1037,6 +1039,12 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 .comp-prof{
     height: 100px;
 }
+.comp-prof > .col-12, .comps > .col-md-4 {
+    padding: 0;
+}
+.comp-prof form, .prof-label, .comps h1, .comps h3 {
+    width: 100%;
+}
 .prof-label{
     color: white;
     font-size: 1.5rem;
@@ -1059,7 +1067,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 }
 .mission > .vr{
     top: 15%;
-    left: calc(50% - 1px);
+    left: 50%;
     height: 70%;
 }
 .mission p {
@@ -1086,21 +1094,25 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 }
 .comps > .vr{
     top: 30%;
-    left: calc(33.33% - 1px);
+    left: 33%;
     height: 40%;
     border-right: 1px solid white;
 }
 .comps h1, .comps h3{
-    position: relative;
+    position: absolute;
     color: white;
     font-weight: 300;
 }
 #comps-slide {
-    padding-top: 10px;
+    padding-top: 30px;
 }
 #comps-slide .carousel-inner .card {
     background-color: transparent;
     border: none;
+    width: 100%;
+}
+#comps-slide .card img {
+    width: 250px;
 }
 #comps-slide .carousel-control-next, #comps-slide .carousel-control-prev{
     padding-top: 30px;
@@ -1116,6 +1128,9 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 .custodian .card {
     border: none;
     background-color: transparent;
+}
+.custodian .card img{
+    width: 150px;
 }
 .custodian .card-block {
     font-size: 0.875rem;
@@ -1159,8 +1174,12 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 .board .nav-link.active, .designation {
     font-weight: 500;
 }
+.board .nav-link.active, .board .nav-link:hover {
+    color: #ffb81c !important;
+    transition: 1s ease-in-out;
+}
 .board .nav-link.active .designation {
-    font-weight: 400;
+    color: white;
 }
 .tag{
     position: absolute;
@@ -1182,9 +1201,11 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 }
 #dir1 p, #dir2 p, #dir3 p, #dir4 p, #dir5 p, #dir6 p, #dir7 p, #dir8 p, #dir9 p,
 #mgt1 p, #mgt2 p, #mgt3 p, #mgt4 p, #mgt5 p, #mgt6 p, #mgt7 p, #mgt8 p{
-    padding: 0 25px;
+    padding: 0 15px;
+    text-align: justify;
 }
 .dir-img figure{
+    display: block;
     top: 50%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -1193,11 +1214,14 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     transform: translateY(-50%);
 }
 .dir-img figure img{
-    width: 70%;
+    width: 50%;
 }
 .dir-img figcaption{
     font-size: 1.25rem;
     color: #4b78af;
+}
+.dir-history {
+    min-height: 250px;
 }
 
 /*Styling for Body Section of Benefits Page*/
@@ -1220,6 +1244,9 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     color: #37afc0;
     font-weight: 600;
 }
+#ab-ret .tab-pane, #pay-grnd .tab-pane, #pay-type .tab-pane {
+    min-height: 250px;
+}
 #ab-ret .nav-tabs, #pay-grnd .nav-tabs, #pay-type .nav-tabs {
     border-bottom: 0;
     margin-top: 3rem;
@@ -1235,9 +1262,15 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     border-right: none;
 }
 #ab-ret img, #pay-grnd img, #pay-type img {
-    position: relative;
-    object-fit: contain;
-    width: 80%;
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50% , -50%);
+    -moz-transform: translate(-50% , -50%);
+    -ms-transform: translate(-50% , -50%);
+    -o-transform: translate(-50% , -50%);
+    transform: translate(-50% , -50%);
 }
 
 /*Styling for Body section of Calculator page*/
@@ -1790,7 +1823,7 @@ footer .table td, .table th {
 /*Styling for Body Section of Downloads Page*/
 .banner-dl img{
     object-fit: contain;
-    width: 100%;
+    width: 101%;
 }
 #downld{
     margin-bottom: 2rem;
@@ -2156,17 +2189,11 @@ footer .table td, .table th {
     }
 
     /*Styling for Investment Page*/
-    .invest-rep-txt > p {
+    .invest-rep > .v-align > p {
         font-size: 1rem;
     }
     .invest-chart-txt {
         right: 30px;
-    }
-    .multi-fund {
-        padding: 0 20px;
-    }
-    .multi-fund-txt img {
-        width: 90px;
     }
     .know .nav-link {
         font-size: 0.875rem;
@@ -2180,12 +2207,6 @@ footer .table td, .table th {
     .prof-label{
         font-size: 1.125rem;
     }
-    #comps-slide {
-        padding-top: 20px;
-    }
-    #comps-slide .card-img-top {
-        width: 45%;
-    }
     .tag {
         height: 50px;
         top: -50px;
@@ -2193,6 +2214,9 @@ footer .table td, .table th {
     }
     .dir-img figcaption {
         font-size: 1.125rem;
+    }
+    .comps {
+        height: 485px;
     }
 
     /*Styling for Benefits Page*/
@@ -2334,7 +2358,7 @@ footer .table td, .table th {
         color: rgba(0, 0, 0, 0.75);
     }
     .vids-txt {
-        margin: 15% 25px 0 25px;
+        margin: 25px 25px 0 25px;
     }
     .invest-bg {
         background-size: cover;
@@ -2367,6 +2391,7 @@ footer .table td, .table th {
         background-size: cover;
         border: none;
         box-shadow: none;
+        height: 195px;
     }
     .reg-txt{
         width: 100%;
@@ -2464,8 +2489,7 @@ footer .table td, .table th {
         height: 530px;
     }
     .comps h3 {
-        margin-top: 30px;
-        margin-bottom: 15px;
+        margin-top: 10px;
     }
     #comps-slide {
         padding-top: 0;
@@ -2476,14 +2500,36 @@ footer .table td, .table th {
     .board-mgt .nav-link {
         font-size: 1.25rem;
     }
+    #dir1, #dir2, #dir3, #dir4, #dir5, #dir6, #dir7, #dir8, #dir9, #mgt1, #mgt2, #mgt3, #mgt4, #mgt5, #mgt6, #mgt7, #mgt8 {
+        margin-bottom: 50px;
+        padding: 0 0 25px;
+    }
+    .dir-img {
+        height: 225px;
+    }
+    .dir-img figure {
+        left: 50%;
+        width: 200px;
+        -webkit-transform: translate(-50% , -50%);
+        -moz-transform: translate(-50% , -50%);
+        -ms-transform: translate(-50% , -50%);
+        -o-transform: translate(-50% , -50%);
+        transform: translate(-50%, -50%);
+    }
+    .dir-img figcaption {
+        font-size: 1rem;
+    }
+    .dir-history, #ab-ret .tab-pane, #pay-grnd .tab-pane, #pay-type .tab-pane  {
+        min-height: 0;
+    }
 
     /*Styling for Benefits Page*/
     .benefits-bg .bg-txt {
         bottom: 20%;
         width: 90%;
     }
-    #ab-ret, #pay-grnd, #pay-type {
-        padding-top: 30px;
+    #ab-ret .col-md-3, #pay-grnd .col-md-3, #pay-type .col-md-3 {
+        height: 250px;
     }
 
     /*Styling for Calculator Page*/
@@ -2612,7 +2658,8 @@ footer .table td, .table th {
         padding: 50px 25px;
     }
     .reg {
-        background-size: 100% 100%;
+        background-size: cover;
+        height: 150px;
     }
 
     /*Styling for Contact Page*/
@@ -2706,15 +2753,20 @@ footer .table td, .table th {
         margin-top: .5rem;
         margin-left: 0;
     }
-    .prof-label {
+    .prof-label, .mission p {
         font-size: 0.875rem;
+    }
+    .prof-label {
         margin-bottom: 1rem;
     }
-    #comps-slide .carousel-control-next, #comps-slide .carousel-control-prev{
-        bottom: 70%;
+    .comps > .col-md-4 {
+        height: 50px;
     }
-    .comps {
-        height: 550px;
+    #comps-slide .card img {
+        width: 200px;
+    }
+    #comps-slide .card .card-text{
+        font-size: 0.875rem;
     }
     .comps h3 {
         margin-top: 10px;
